--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,9 +16,13 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-dotnet@v1
-    with:
-      dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
-      - run: dotnet build panoptico
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Net Core 3.1
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
+      - name: Building
+        run: dotnet build panoptico
+        working-directory: ./src/panoptico
       
