--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,6 +23,5 @@ jobs:
         with:
           dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
       - name: Building
-        run: dotnet build panoptico
-        working-directory: ./src/panoptico
+        run: dotnet build src/panoptico/panoptico
       
