--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,17 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-dotnet@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Net Core 3.1
+        uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
-      - run: dotnet build ./src/Panoptico/Panoptico.sln
+      
+      - name: Building
+        run: dotnet build ./src/Panoptico/Panoptico.sln
+      
+      - name: Testing
+        run: dotnet test ./src/Panoptico/Panoptico.sln
       
