--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: manual compilation
+name: manual
 
 # Controls when the workflow will run
 on:
@@ -18,10 +18,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Setup Net Core 3.1
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
-      - name: Building
-        run: dotnet build src/Panoptico/Panoptico
       
+      - name: Building
+        run: dotnet build ./src/Panoptico/Panoptico.sln
+      
+      - name: Testing
+        run: dotnet test ./src/Panoptico/Panoptico.sln
+
